fix UI for responsive on tablet

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -494,7 +494,7 @@
   height: 85%;
   border-radius: 2px;
   margin-right: 3px;
-  width: 7%;
+  width: 55px;
   cursor: pointer;
 }
 
